@@ -1,5 +1,12 @@
 2015-02-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* python/py-framefilter.c (py_print_frame): Mention RETURN_QUIT in
+	function comment.  Wrap all function that can throw in cleanups.
+	(gdbpy_apply_frame_filter): Wrap all function that can throw in
+	cleanups.
+
+2015-02-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* python/py-framefilter.c (py_print_frame): Substitute goto error.
 	Remove the error label.
 
